--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,75 +9,100 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     text-align: center;
+    background-color: rgb(255, 239, 168);
 }
 
+  
 .navbar {
-color: black;
-border-radius: 0;
-margin: 0;
-}
-
-.navbar-header {
-  height: 100px;
-  color: black;
-}
-
-
-#hero {
-  height: 200px;
+  margin: 0 0 20px 0;
+  padding: 40px;
+  background-color: black;
   width: 100%;
-  position: relative;
-  margin-top: 0;
-  margin-bottom: 25px;
-  background-image: url(https://placehold.it/400x100);
-  background-size: cover;
-  background-position: top;
-  color: white;
-  font-size: 28px;
-  font-weight: 700;
+  justify-content: center;
 }
 
-#cityName {
-  width: 100%;
-  background-color: blue;
-  padding: 20px 80px 20px 80px;
-  text-align: center;
-  color: #f2f2f2;
-  font-size: 54px;
-  margin-bottom: 20px;
-}
-
-.hero-text {
-text-align: center;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-}
 
 h1 {
-  color: black;
+  font-size: 54px;
+  font-family: 'Neucha', cursive;
+  color: white;
+  text-align: center;
 }
 
-.intro {
-  text-align: left;
-  margin-bottom: 40px;
+h2 {
+  font-size: 34px;
+  font-family: 'Neucha', cursive;
+  color: #ff004c;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.info-section  {
+ margin: 60px;
+ padding: 20px;
+ background-color: rgba(0, 128, 255, 0.2);
+ border-radius: 4px;
+
+}
+
+.banner {
+  background-image: url('/assets/img/maps.jpg');
+  background-position: center center;
+  height: 300px; 
+  border: 1px solid black;
+  border-radius: 4px;
+  max-width: 800px;
+  width: 100%;
+}
+
+.banner-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.randomButton {
+  justify-content: center;
+  background-color: rgb(0, 122, 57);
+  border-radius: 4px;
+  box-shadow: 0 0 1px #ccc;
+  -webkit-transition: all 0.5s ease-in-out;
+  width: 300px;
+  font-family: 'Neucha', cursive;
+  font-size: 44px;
+  margin-top: 60px;
+}
+
+.randomButton:hover {
+  -webkit-transform: scale(1.1);
+  background: #ff004c;
+}
+
+.about {
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: #ff004c;
+  text-align: center;
+}
+
+.info {
+  border: 1px solid black;
+  border-radius: 4px;
+  background-color: #5900ff;
+  text-align: center;
 }
 
 footer {
-background-color: #02422d;
-color: #f2f2f2;
-padding: 25px;
-position: absolute;
-width: 100%;
-min-height: 60px;
-bottom: 40px;
-left: 0;
+  height: 50px;  
+  padding: 10px;
+  background-color: #ff004c;
+  width: 100%;
+  margin: 0;
 }
 
-
-          position: absolute;
-          width: 100%;
-          min-height: 320px;
-          bottom: 40px;
-          left: 0;
+footer p {
+  text-align: center;
+  color: white;
+}
