--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -37,6 +37,14 @@ h2 {
   margin-bottom: 10px;
 }
 
+h3 {
+  font-size: 24px;
+  font-family: 'Neucha', cursive;
+  color: white;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .info-section  {
  margin: 60px;
  padding: 20px;
@@ -62,7 +70,19 @@ h2 {
   align-items: center;
 }
 
+.explore {
+  margin-top: 40px;
+  width: 200px;
+  padding: 20px;
+  font-family: 'Neucha', cursive;
+  font-size: 24px;
+  background-color: #ff004c;
+}
 
+
+#city-name {
+  color:rgba(0, 52, 104)
+}
 .randomButton {
   justify-content: center;
   background-color: rgb(0, 122, 57);
@@ -92,6 +112,19 @@ h2 {
   border-radius: 4px;
   background-color: #5900ff;
   text-align: center;
+}
+
+.weather {
+  background-color: rgb(0, 174, 255);
+  border-radius: 4px;
+  padding: 40px;
+
+}
+
+.hotels {
+  background-color: rgb(0, 48, 206);
+  border-radius: 4px;
+  padding: 40px;
 }
 
 footer {
